# govtech-hackathon-2026-semantic-bridge

./: .env.example  .gitignore  CLAUDE.md  README.md  dataset_structure.json  dataset_structure_utf8.json  openapi_webui.json  pyproject.toml
.github/: copilot-instructions.md
adapters/: cache.py
adapters/mcp/: client.py  models.py  protocol.py  sse.py  transport.py
adapters/mock_mcp/: server.py
agents/: interoperability_agent.py
api/: dependencies.py
api/routes/: compare.py  harmonize.py  health.py  match.py  search.py  shacl_match.py  transform.py  validate.py
app/: main.py
cli/: main.py
core/: config.py  exceptions.py  logging.py
data/enterprise/: crm_contacts.csv  hr_employees.csv
data/swiss/: communes.csv  population.csv
docs/: api.md  architecture.md  i14y-mcp-reference.md  use-cases.md
docs/adr/: 001-mcp-client-design.md
domain/: comparison.py  concept.py  mapping.py  schema.py  shacl_shape.py  transformation.py
scripts/: analyze_real_estate.py  check_tools_db.py  check_webui_live.py  fix_webui_db.py  force_tool_default.py  inspect_model.py  inspect_webui_db.py  query_concepts.py  register_i14y_filter.py  register_i14y_tools.py  register_matching_tools.py  seed_mock_concepts.py  setup_open_webui.py  system_prompt_i14y.txt  test_e2e.py  test_infomaniak_token.py
services/: comparison.py  embedding.py  mapping.py  matching.py  schema_resolver.py  shacl_matching.py  transformation.py  validation.py
tests/: conftest.py  test_matching.py  test_mcp_client.py  test_transformation.py  test_validation.py
ui/: main.py
ui/pages/: 0_chat.py  (+7 more)
