[project]
name = "semantic-bridge"
version = "0.1.0"
description = "Local-first Swiss I14Y interoperability platform with semantic schema matching"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.35",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "litellm>=1.40",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "rapidfuzz>=3.9",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "rdflib>=7.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
semantic-bridge = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "api", "ui", "cli", "core", "domain", "services", "adapters", "agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
